# ExistenzAPIFetcher

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: deep_learning_pipeline.ipynb  evapotranspiration.ipynb  rainfall_runoff.ipynb
examples/.ipynb_checkpoints/: deep_learning_pipeline-checkpoint.ipynb  evapotranspiration-checkpoint.ipynb  rainfall_runoff-checkpoint.ipynb
existenz_api_fetcher/: hydro.py  locations.py  meteo.py  pipelines.py
existenz_api_fetcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
existenz_api_fetcher/.ipynb_checkpoints/: meteo-checkpoint.py
tests/: test_hydro.py  test_meteo.py  test_pipelines.py
