[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "existenz_api_fetcher"
version = "0.0.9"
authors = [
	{name="Lilian Lonla", email="lilianlonla15@gmail.com"}
]
description = "Easily fetch swiss weather and hydrological data from the Existenz API"
readme = "README.md"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lilian1510/ExistenzAPIFetcher/"
