[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "existenz_api_fetcher"
version = "0.1.4"
authors = [
	{name="Lilian Lonla", email="lilianlonla15@gmail.com"}
]
description = "Easily fetch swiss weather and hydrological data from the Existenz API"
readme = "README.md"
requires-python='>=3.7'
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Lilian1510/ExistenzAPIFetcher/"
