[metadata]
name = existenz_api_fetcher
description = Easily fetch swiss Weather and Hydrological data from the Existenz API
long_description = file: README.md
author = Lilian Lonla
licence = MIT
license_files = LICENSE.txt
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    existenz_api_fetcher
install_requires =
    influxdb_client>=1.32.0
    pandas>=1.4.1
    pyet>=1.1.0
python_requires = >=3.6
package_dir =
    existenz_api_fetcher
zip_safe = no
